--- a/css/footer.scss
+++ b/css/footer.scss
@@ -4,7 +4,7 @@
     color: #f1f1f1;
     padding: 60px 20px 20px;
     font-family: $font-family;
-    margin-top: 100px;
+    margin-top: 0; // Removed margin to prevent white gap
     position: relative;
     width: 100%;
     z-index: 101;
